@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180218"
-#define public MagickPackageReleaseDate "snapshot-20180218"
+#define public MagickPackageVersionAddendum ".020180219"
+#define public MagickPackageReleaseDate "snapshot-20180219"
